<resources>
    <string name="app_name">IndyGo Reservation</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="button_login">Login</string>
    <string name="button_new_acct">Create Account</string>
    <string name="button_one_time_purchase">Guest</string>
    <string name="button_reserve">Reserve a Spot</string>
    <string name="button_purchase">Purchase a Ticket</string>
    <string name="button_logout">Logout</string>
    <string name="text_notes">Notes</string>
    <string name="text_address">Stop Address</string>
    <string name="button_reserve_now">Reserve Now</string>
    <string name="button_yes">Yes</string>
    <string name="button_no">No</string>
    <string name="password_confirm">Confirm Password</string>
    <string name="text_firstname">First Name</string>
    <string name="text_lastname">Last Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="button_create">Create Account</string>
    <string name="button_buy">Buy Now</string>
    <string-array name="route_dropdown">
        <item>Select Route</item>
        <item>2: East 34th St</item>
        <item>3: Michigan Street</item>
        <item>4: Fort Harrison</item>
        <item>5: East 25th St</item>
        <item>6: Harding</item>
        <item>8: Washington</item>
        <item>10: 10th Street</item>
        <item>11: East 16th St</item>
        <item>12: Minnesota</item>
        <item>13: Raymond Street</item>
        <item>14: Prospect</item>
        <item>15: West 34th St</item>
        <item>16: Beech Grove</item>
        <item>18: Broad Ripple</item>
        <item>19: Castleton</item>
        <item>21: East 21st St</item>
        <item>24: Mars Hill</item>
        <item>25: West 16th St</item>
        <item>26: Keystone Crosstown</item>
        <item>28: St.Vincent</item>
        <item>30: 30th Street Crosstown</item>
        <item>31: Madison</item>
        <item>34: ML King/Michigan Rd</item>
        <item>37: Park 100</item>
        <item>38: West 38th St</item>
        <item>39: East 38th St</item>
        <item>55: English</item>
        <item>86: 86th St Crosstown</item>
        <item>87: Eastside Circulator</item>
        <item>90: Red Line</item>
        <item>901: Route 90 - 91st Street Extension</item>
        <item>902: Route 90 - Greenwood Extension</item>
    </string-array>
    <string name="login_prompt">Guests may only reserve seats for the day of use and purchase tickets. Do you wish to proceed as a guest?</string>
    <string name="text_payment">Payment Info</string>
    <string name="text_start">Start Time</string>
    <string name="text_end">End Time</string>
    <string name="text_welcome">Thank you for choosing IndyGo Transit!</string>
    <string name="text_date">Date</string>
    <string name="settings_page_header">Settings</string>
    <string name="automated_coupon_prompt">Automatically recommend coupons for local businesses</string>
    <string name="ticket_two_hour">Two-Hour Transfer - $1.75</string>
    <string name="ticket_one_day">One Day - $4.00</string>
    <string name="ticket_10_trips">10 Trips - $17.50</string>
    <string name="ticket_7_days">7 Days - $20.00</string>
    <string name="ticket_31_days">31 Days - $60.00</string>
    <string name="ticket_one_trip">Open Door One Trip - $3.50</string>
    <string name="text_ad_placeholder">In a full release, there would be an ad for a local business here</string>
    <string name="card_number">Card Number</string>
    <string name="cvc_code">CVC Code</string>
    <string name="expiration_date">Expiration Date</string>
    <string name="card_name">Name on Card</string>
    <string name="reservation_thanks">Thank you for reserving a seat! You should shortly be receiving an email confirming your reservation, or a similar PDF should be saved to your device. Have a wonderful day!</string>
    <string name="button_back_to_main">Logout and Return to Main</string>
    <string name="ticket_thanks">Thank you for purchasing a ticket! You should shortly be receiving an email confirming your purchase, or a similar PDF should be saved to your device. Have a wonderful day!</string>
</resources>